--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,6 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - icon: fab fa-github
+      href: https://github.com/kmasiello/why_apis
 output: distill::distill_article
